--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 	  <p><strong>RESEARCH (Under construction, spectra available at Spectral Data tab)</strong></p>
 	</div>
       </blockquote>
-	    <p><img src="Picture1.jpg" alt="" /></p>
+	    <a href="contact.html"><p><img src="Picture1.jpg" alt="" /></p></a>
 
     <div id="footer">
       <!-- PAGE FOOTER -->      
