--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
 	</div>
       </blockquote>
 	    <a href="contact.html"><p><img src="Picture1.jpg" alt="" /></p></a>
-
+<a href="contact.html"><p><img src="Picture2.jpg" alt="" /></p></a>
     <div id="footer">
       <!-- PAGE FOOTER -->      
       <p>&copy; Copyright 2015 State of California</p>
