--- a/research.html
+++ b/research.html
@@ -30,8 +30,8 @@
 	  <p><strong>RESEARCH (Under construction, spectra available at Spectral Data tab)</strong></p>
 	</div>
       </blockquote>
-	    <a href="contact.html"><p><img src="Picture1.jpg" alt="" /></p></a>
-<a href="contact.html"><p><img src="Picture2.jpg" alt="" /></p></a>
+	    <a href="contact.html"><p><img src="New Image 2.png" alt="" /></p></a>
+<a href="contact.html"><p><img src="Picture3.png" alt="" /></p></a>
     <div id="footer">
       <!-- PAGE FOOTER -->      
       <p>&copy; Copyright 2015 State of California</p>
