--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
       <!-- WHERE THE RESEARCH DESCRIPTION WILL GO -->
       <blockquote>
 	<div>
-	  <p><strong>RESEARCH TOPICS (Under construction, spectra available at Spectral Data tab)</strong></p>
+	  <p><strong><large>RESEARCH TOPICS (Under construction, spectra available at Spectral Data tab)</strong></p>
 	</div>
       </blockquote>
 	    <a href="contact.html"><p><img src="Picture1.png" alt="" /></p></a>
