--- a/instrumentation.html
+++ b/instrumentation.html
@@ -28,7 +28,9 @@
       <blockquote>
 	<div>
 	  <!-- DESCRIPTION OF SPECTRAL ACQUISITION-->
+		 </blockquote>
 		 <a href="contact.html"><p><img src="Text.png" alt="" /></p></a>
+	      
           <p><strong>Instrumentation</strong></p>    
           Spectral data were collected at the CDPH-EHLB in Richmond, CA. The following instruments were used for spectra acquisition:
           <ul>
