--- a/instrumentation.html
+++ b/instrumentation.html
@@ -30,7 +30,7 @@
 	  <!-- DESCRIPTION OF SPECTRAL ACQUISITION-->
 		 </blockquote>
 		 <a href="contact.html"><p><img src="Text.png" alt="" /></p></a>
-	      
+	      <div id="footer">
           <p><strong>Instrumentation</strong></p>    
           Spectral data were collected at the CDPH-EHLB in Richmond, CA. The following instruments were used for spectra acquisition:
           <ul>
