--- a/instrumentation.html
+++ b/instrumentation.html
@@ -44,6 +44,9 @@
 	    <!-- DOWNLOADS FOR BASELINE SUBTRACTION ALGORITHM -->
             <li>BaselineSubGUI 1.0.0 <a href=""> x86 </a>|<a href="Downloads/BaselineSubGUI_1.0.0_x64.zip"> x64 </a></li>
           </ul>
+		  <p><img src="Invia.png" alt="" /></p>
+	          <p><img src="Senterra.png" alt="" /></p>
+		  <p><img src="DeltaNu.png" alt="" /></p>
         </div>
       </blockquote>
 
