--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 	  <p><strong>CONTACT (Under construction, spectra available at Spectral Data tab)</strong></p>
 	</div>
       </blockquote>
-
+          <p><img src="Contact 1.png" alt="" /></p>
 	</div>
 
    	<div id="footer">
