--- a/instrumentation.html
+++ b/instrumentation.html
@@ -44,9 +44,7 @@
 	    <!-- DOWNLOADS FOR BASELINE SUBTRACTION ALGORITHM -->
             <li>BaselineSubGUI 1.0.0 <a href=""> x86 </a>|<a href="Downloads/BaselineSubGUI_1.0.0_x64.zip"> x64 </a></li>
           </ul>
-		  <p><img src="Invia.png" alt="" /></p>
-	          <p><img src="Senterra.png" alt="" /></p>
-		  <p><img src="DeltaNu.png" alt="" /></p>
+		  <p><img src="Invia.png" alt="" /></p> <p><img src="Senterra.png" alt="" /></p> <p><img src="DeltaNu.png" alt="" /></p>
     <div id="footer">
       <!-- PAGE FOOTER -->
       <p>&copy; Copyright 2015 State of California</p>
