--- a/instrumentation.html
+++ b/instrumentation.html
@@ -28,7 +28,7 @@
       <blockquote>
 	<div>
 	  <!-- DESCRIPTION OF SPECTRAL ACQUISITION-->
-<p><strong>Instrumentation</strong></p>    
+		<p><strong><large>Instrumentation</large></strong></p>    
           Spectral data were collected at the CDPH-EHLB in Richmond, CA. The following instruments were used for spectra acquisition:
           <ul>
             <li> Renishaw inVia Raman Microscope (785 nm, 532 nm)</li>
