--- a/Unknown Identification.html
+++ b/Unknown Identification.html
@@ -35,7 +35,9 @@
 	    <a href="contact.html"><p><img src="Picture3.png" alt="" /></p></a>
 	    <a href="contact.html"><p><img src="Picture4.png" alt="" /></p></a>
 	    <a href="contact.html"><p><img src="Picture5.png" alt="" /></p></a>
+	    <a href="unknownidentification.html><p><im src="Unknown ID.png"></p></a>
     <div id="footer">
+	    
       <!-- PAGE FOOTER -->      
       <p>&copy; Copyright 2015 State of California</p>
     </div>
