--- a/Unknown Identification.html
+++ b/Unknown Identification.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title> CDPH-EHLB Raman Spectral Library </title>
+    <!-- SETTING UP SITE (TITLE, CSS STYLE, BACKGROUND, METADATA) -->
+    <link href="home.css" type="text/css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  </head>
+
+  <body>
+    <div id="wrapper">
+    <div id="nav">
+      <!-- NAVIGATION BAR AT TOP OF PAGE -->
+      <ul>
+        <li><a href="home.html"> Home </a></li>
+        <li><a href="spectraldata.html"> Spectral Data </a></li>
+        <li><a href="instrumentation.html"> Instrumentation </a></li>
+        <li><a href="research.html"> Research </a></li>
+        <li><a href="contact.html"> Contact </a></li>
+      </ul>
+    </div>
+
+    <div id="feature">
+      <!-- WHERE THE RESEARCH DESCRIPTION WILL GO -->
+      <blockquote>
+	<div>
+	  <p><strong><large>RESEARCH TOPICS (Under construction, spectra available at Spectral Data tab)</strong></p>
+	</div>
+      </blockquote>
+	    <a href="Unknown Identification.html"><p><img src="Picture1.png" alt="" /></p></a>
+            <a href="contact.html"><p><img src="Picture2.png" alt="" /></p></a>
+	    <a href="contact.html"><p><img src="Picture3.png" alt="" /></p></a>
+	    <a href="contact.html"><p><img src="Picture4.png" alt="" /></p></a>
+	    <a href="contact.html"><p><img src="Picture5.png" alt="" /></p></a>
+    <div id="footer">
+      <!-- PAGE FOOTER -->      
+      <p>&copy; Copyright 2015 State of California</p>
+    </div>
+    </div>
+  </body>
 <img src="Unknown ID.png"></img?
+
+</html>
+
