--- a/Microplastics.html
+++ b/Microplastics.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title> CDPH-EHLB Raman Spectral Library </title>
+    <!-- SETTING UP SITE (TITLE, CSS STYLE, BACKGROUND, METADATA) -->
+    <link href="home.css" type="text/css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  </head>
+
+  <body>
+    <div id="wrapper">
+    <div id="nav">
+      <!-- NAVIGATION BAR AT TOP OF PAGE -->
+      <ul>
+        <li><a href="home.html"> Home </a></li>
+        <li><a href="spectraldata.html"> Spectral Data </a></li>
+        <li><a href="instrumentation.html"> Instrumentation </a></li>
+        <li><a href="research.html"> Research </a></li>
+        <li><a href="contact.html"> Contact </a></li>
+      </ul>
+    </div>
+    <img src="Microplastics.png"></img?
+    <div id="feature">
+      <!-- WHERE THE RESEARCH DESCRIPTION WILL GO -->
+      <blockquote>
+	<div>
+	</div>
+      </blockquote>
+
+    <div id="footer">
+      <!-- PAGE FOOTER -->      
+      <p>&copy; Copyright 2015 State of California</p>
+    </div>
+    </div>
+  </body>
+
+
+</html>
 
