--- a/research.html
+++ b/research.html
@@ -31,10 +31,10 @@
 	</div>
       </blockquote>
 	    <a href="Unknown Identification.html"><p><img src="Picture1.png" alt="" /></p></a>
-            <a href="contact.html"><p><img src="Picture2.png" alt="" /></p></a>
-	    <a href="contact.html"><p><img src="Picture3.png" alt="" /></p></a>
-	    <a href="contact.html"><p><img src="Picture4.png" alt="" /></p></a>
-	    <a href="contact.html"><p><img src="Picture5.png" alt="" /></p></a>
+            <a href="Fungal Spore.html"><p><img src="Picture2.png" alt="" /></p></a>
+	    <a href="Flame Retardant.html"><p><img src="Picture3.png" alt="" /></p></a>
+	    <a href="Chemical Mapping.html"><p><img src="Picture4.png" alt="" /></p></a>
+	    <a href="Microplastics.html"><p><img src="Picture5.png" alt="" /></p></a>
     <div id="footer">
       <!-- PAGE FOOTER -->      
       <p>&copy; Copyright 2015 State of California</p>
