--- a/research.html
+++ b/research.html
@@ -14,13 +14,13 @@
     <div id="wrapper">
     <div id="nav">
       <!-- NAVIGATION BAR AT TOP OF PAGE -->
-      <ul>
+      <span>
         <li><a href="home.html"> Home </a></li>
         <li><a href="spectraldata.html"> Spectral Data </a></li>
         <li><a href="instrumentation.html"> Instrumentation </a></li>
         <li><a href="research.html"> Research </a></li>
         <li><a href="contact.html"> Contact </a></li>
-      </ul>
+      </span>
     </div>
 
     <div id="feature">
