--- a/research.html
+++ b/research.html
@@ -14,12 +14,15 @@
     <div id="wrapper">
     <div id="nav">
       <!-- NAVIGATION BAR AT TOP OF PAGE -->
-      <span>
-        <li><a href="home.html"> Home </a></li>
-        <li><a href="spectraldata.html"> Spectral Data </a></li>
-        <li><a href="instrumentation.html"> Instrumentation </a></li>
-        <li><a href="research.html"> Research </a></li>
-        <li><a href="contact.html"> Contact </a></li>
+      <table>
+	      <tr>
+		      <td><li><a href="home.html"> Home </a></li></td>
+		      <td><li><a href="spectraldata.html"> Spectral Data </a></li></td>
+		      <td><li><a href="instrumentation.html"> Instrumentation </a></li></td>
+		      <td><li><a href="research.html"> Research </a></li></td>
+		      <td><li><a href="contact.html"> Contact </a></li></td>
+	      </tr>
+	    </table>
       </span>
     </div>
 
